@@ -13,9 +13,12 @@ LOG_DIR=`pwd`
 
 export CFLAGS="-I/usr/x86_64-w64-mingw32/include -I${PREFIX}/include -I${PREFIX}/share/gettext -I${PREFIX}/include/glib-2.0 -I${PREFIX}/lib/glib-2.0/include -I${PREFIX}/include/libpng16 -I${PREFIX}/include/freetype2"
 export CXXFLAGS="-I/usr/x86_64-w64-mingw32/include -I${PREFIX}/include"
-export LDFLAGS="-L${PREFIX}/lib -L${PREFIX}/lib64"
-export PKG_CONFIG_PATH="${PREFIX}/lib/pkgconfig:${PREFIX}/lib64/pkgconfig"
-export PKG_CONFIG_SYSROOT_DIR="/usr/x86_64-w64-mingw32/sys-root/mingw"
+export LDFLAGS="-L${PREFIX}/lib -L${PREFIX}/lib64 -L${PREFIX}/bin"
+#export PKG_CONFIG_PATH="${PREFIX}/lib/pkgconfig:${PREFIX}/lib64/pkgconfig"
+export PKG_CONFIG_PATH=
+export PKG_CONFIG_LIBDIR="${PREFIX}/lib/pkgconfig:${PREFIX}/lib64/pkgconfig:${HOST_ROOT}${PREFIX}/lib/pkgconfig:${HOST_ROOT}${PREFIX}/lib64/pkgconfig"
+#export PKG_CONFIG_SYSROOT_DIR="/usr/x86_64-w64-mingw32/sys-root/mingw"
+export PKG_CONFIG_SYSROOT_DIR="${HOST_ROOT}"
 # some packages do not produce a package.config file:
 #export LIBRARY_PATH="-L/usr/x86_64-w64-mingw32/sys-root/mingw/lib -L${PREFIX}/lib -L${PREFIX}/lib64"
 
@@ -54,7 +57,8 @@ echo "      log: ${LOG_FILE}"
 cd src/atk-2*
     # tun off introspection support, seems not to be available in my gobject:
     sed -i -e 's/true/false/' meson_options.txt
-    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} --wipe > ${LOG_FILE} 2>&1
+    rm -fr builddir  # remove artifacts from previous build
+    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} > ${LOG_FILE} 2>&1
     cd builddir
         meson compile >> ${LOG_FILE} 2>&1
         meson install --destdir=${HOST_ROOT} >> ${LOG_FILE} 2>&1
@@ -83,7 +87,8 @@ echo `date +'%H:%M'`" building gdk-pixbuf..."
 LOG_FILE=${LOG_DIR}/log_gdk-pixbuf.txt
 echo "      log: ${LOG_FILE}"
 cd src/gdk-pixbuf-2*
-    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} --wipe > ${LOG_FILE} 2>&1
+    rm -fr builddir  # remove artifacts from previous build
+    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} > ${LOG_FILE} 2>&1
     cd builddir
         meson compile >> ${LOG_FILE} 2>&1
         meson install --destdir=${HOST_ROOT} >> ${LOG_FILE} 2>&1
@@ -106,8 +111,11 @@ echo "      log: ${LOG_FILE}"
 echo "      expected duration: 15 min"
 cd src/pango-1*
     # meson setup . builddir --cross-file ../../cross_file.txt -Ddefault_library=static -Dprefix=${PREFIX} > ${LOG_FILE} 2>&1
-    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} --wipe > ${LOG_FILE} 2>&1
+    rm -fr builddir  # remove artifacts from previous build
+    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} > ${LOG_FILE} 2>&1
     cd builddir
+        # gio tests do not work in my cross build environment:
+        meson configure -Dtests=false -Dglib.tests=false >> ${LOG_FILE} 2>&1
         meson compile >> ${LOG_FILE} 2>&1
         meson install --destdir=${HOST_ROOT} >> ${LOG_FILE} 2>&1
     cd ..
@@ -117,7 +125,8 @@ echo `date +'%H:%M'`" building gtk..."
 LOG_FILE=${LOG_DIR}/log_gtk.txt
 echo "      log: ${LOG_FILE}"
 cd src/gtk+-3*
-    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} --wipe > ${LOG_FILE} 2>&1
+    rm -fr builddir  # remove artifacts from previous build
+    meson setup . builddir --cross-file ../../cross_file.txt -Dprefix=${PREFIX} > ${LOG_FILE} 2>&1
     cd builddir
         meson compile >> ${LOG_FILE} 2>&1
         meson install --destdir=${HOST_ROOT} >> ${LOG_FILE} 2>&1
